--- a/curl/Dockerfile
+++ b/curl/Dockerfile
@@ -33,6 +33,7 @@ RUN nice cmake \
 	-DBUILD_CURL_EXE=OFF \
 	-DBUILD_TESTING=OFF \
 	-DCURL_STATICLIB=ON \
+	-DBUILD_SHARED_LIBS=OFF \
 	-DHTTP_ONLY=ON \
 	-DCMAKE_USE_OPENSSL:BOOL=ON \
 	-DOPENSSL_ROOT_DIR:PATH=$HOME/openssl \
