--- a/.gitmodules
+++ b/.gitmodules
@@ -22,6 +22,7 @@
 [submodule "curl/curlpp"]
 	path = curl/curlpp
 	url = https://github.com/jpbarrette/curlpp.git
+	branch = master
 [submodule "libuv/libuv"]
 	path = libuv/libuv
 	url = https://github.com/libuv/libuv.git
