--- a/libmaxminddb/Dockerfile
+++ b/libmaxminddb/Dockerfile
@@ -15,4 +15,4 @@ WORKDIR $HOME/libmaxminddb
 RUN ./bootstrap
 RUN ./configure ${CONFIGURE_ENABLE_DEBUG} --prefix=$HOME/install \
     --enable-static
-RUN nice make -j$NPROC && make install
+RUN nice make -j${NPROC:-3} && make install
