--- a/libuv/Dockerfile
+++ b/libuv/Dockerfile
@@ -16,4 +16,4 @@ WORKDIR $HOME/libuv
 RUN ./autogen.sh
 WORKDIR $HOME/build/libuv
 RUN $HOME/libuv/configure --prefix=$HOME/install
-RUN CFLAGS=`echo ${BUILD_CFLAGS} | sed 's/\\\\ / /g'`; nice make -j$NPROC && make install
+RUN CFLAGS=`echo ${BUILD_CFLAGS} | sed 's/\\\\ / /g'`; nice make -j${NPROC:-3} && make install
