--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -59,6 +59,8 @@ jobs:
           # sets environment variables for use in later steps.
           # see https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable
 
+          cd $GITHUB_WORKSPACE/src
+
           git_short_hash=$(git rev-parse --short=8 HEAD)
 
           echo "git_short_hash=${git_short_hash}" >> "$GITHUB_ENV"
