prefix the build env with `opentelemetry-network-` (rather than ebpf)

--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -24,7 +24,7 @@ on:
         description: "Prefix to use for destination image name"
         required: false
         type: string
-        default: "opentelemetry-ebpf-"
+        default: "opentelemetry-network-"
       additional_tag:
         description: "Additional tag to use when pushing to docker repository"
         required: false
