--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -68,8 +68,8 @@ jobs:
           echo "git_short_hash = ${git_short_hash}"
       - name: Install dependencies
         run: |
-          apt-get update
-          apt-get install -y cmake build-essential
+          sudo apt-get update
+          sudo apt-get install -y cmake build-essential
       - name: Build build-env container
         run: |
           cd $GITHUB_WORKSPACE/src
