Update runs-on label to ubuntu-latest

--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -37,8 +37,7 @@ env:
 jobs:
   build-and-release:
     name: Build and release
-    runs-on:
-      labels: otel-linux-latest-4-cores
+    runs-on: ubuntu-latest
     steps:
       - name: Log-in to container registry
         run: |
