--- a/final/Dockerfile
+++ b/final/Dockerfile
@@ -14,6 +14,7 @@ ARG abseil_cpp_IMAGE_TAG
 ARG libmaxminddb_IMAGE_TAG
 ARG gcp_cpp_IMAGE_TAG
 ARG opentelemetry_IMAGE_TAG
+ARG libbpf_IMAGE_TAG
 #gen:dep-arg
 
 FROM $base_IMAGE_TAG as build-main
@@ -29,6 +30,7 @@ FROM $abseil_cpp_IMAGE_TAG as build-abseil-cpp
 FROM $libmaxminddb_IMAGE_TAG as build-libmaxminddb
 FROM $gcp_cpp_IMAGE_TAG as build-gcp_cpp
 FROM $opentelemetry_IMAGE_TAG as build-opentelemetry
+FROM $libbpf_IMAGE_TAG as build-libbpf
 #gen:dep-from
 
 # Bring everything together
@@ -99,6 +101,7 @@ COPY --from=build-libmaxminddb $HOME/install $HOME/install
 COPY --from=build-grpc-cpp $HOME/install $HOME/install
 COPY --from=build-gcp_cpp $HOME/install $HOME/install
 COPY --from=build-opentelemetry $HOME/install $HOME/install
+COPY --from=build-libbpf $HOME/install $HOME/install
 #gen:dep-copy
 
 COPY --from=build-go $HOME/go/bin /usr/local/go/bin
