try building on ubuntu-24.04

--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -41,7 +41,7 @@ jobs:
   build-and-release:
     name: Build and release
     runs-on:
-      labels: otel-linux-latest-4-cores
+      labels: ubuntu-24.04
     steps:
       - name: Log-in to container registry
         run: |
