--- a/.github/workflows/build_and_push_parallel.yml
+++ b/.github/workflows/build_and_push_parallel.yml
@@ -53,9 +53,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push base image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container//
         with:
           directory: base
           registry: ${{ env.CACHE_REGISTRY }}
@@ -73,9 +78,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push openssl image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: openssl
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -93,9 +103,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push bcc image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: bcc
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -113,9 +128,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push libuv image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: libuv
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -133,9 +153,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push cpp_misc image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: cpp_misc
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -153,9 +178,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push go image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: go
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -173,9 +203,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push abseil_cpp image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: abseil_cpp
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -193,9 +228,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push libmaxminddb image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: libmaxminddb
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -213,9 +253,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push libbpf image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: libbpf
           dependencies: ${{ needs.build-base.outputs.image-tag }}
@@ -234,9 +279,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push curl image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: curl
           dependencies: ${{ needs.build-base.outputs.image-tag }} ${{ needs.build-openssl.outputs.image-tag }}
@@ -255,9 +305,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push grpc_cpp image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: grpc_cpp
           dependencies: ${{ needs.build-base.outputs.image-tag }} ${{ needs.build-abseil-cpp.outputs.image-tag }} ${{ needs.build-openssl.outputs.image-tag }}
@@ -276,9 +331,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push aws_sdk image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: aws_sdk
           dependencies: ${{ needs.build-base.outputs.image-tag }} ${{ needs.build-openssl.outputs.image-tag }} ${{ needs.build-curl.outputs.image-tag }}
@@ -297,9 +357,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push gcp_cpp image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: gcp_cpp
           dependencies: ${{ needs.build-base.outputs.image-tag }} ${{ needs.build-openssl.outputs.image-tag }} ${{ needs.build-curl.outputs.image-tag }} ${{ needs.build-grpc-cpp.outputs.image-tag }}
@@ -318,9 +383,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push opentelemetry image
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: opentelemetry
           dependencies: ${{ needs.build-base.outputs.image-tag }} ${{ needs.build-grpc-cpp.outputs.image-tag }}
@@ -354,9 +424,14 @@ jobs:
       image-tag: ${{ steps.build.outputs.image-tag }}
       image-exists: ${{ steps.build.outputs.image-exists }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          ref: ${{ inputs.ref }}
+
       - name: Build and push final image to cache registry
         id: build
-        uses: ./.github/actions/build-push-container
+        uses: ./.github/actions/build-push-container/
         with:
           directory: final
           dependencies: ${{ needs.build-base.outputs.image-tag }} ${{ needs.build-openssl.outputs.image-tag }} ${{ needs.build-curl.outputs.image-tag }} ${{ needs.build-bcc.outputs.image-tag }} ${{ needs.build-libuv.outputs.image-tag }} ${{ needs.build-aws-sdk.outputs.image-tag }} ${{ needs.build-cpp-misc.outputs.image-tag }} ${{ needs.build-go.outputs.image-tag }} ${{ needs.build-grpc-cpp.outputs.image-tag }} ${{ needs.build-abseil-cpp.outputs.image-tag }} ${{ needs.build-libmaxminddb.outputs.image-tag }} ${{ needs.build-gcp-cpp.outputs.image-tag }} ${{ needs.build-opentelemetry.outputs.image-tag }} ${{ needs.build-libbpf.outputs.image-tag }}
